[gd_scene load_steps=19 format=4 uid="uid://dnx0cxl4a46lg"]

[ext_resource type="Script" uid="uid://daaph63aiv3vd" path="res://scripts/TurnManager.gd" id="1_xh13x"]
[ext_resource type="Texture2D" uid="uid://ciitwnd7hxyra" path="res://assets/spritesheet.png" id="2_17g6i"]
[ext_resource type="PackedScene" uid="uid://chbt4bn7n6ytk" path="res://scenes/Soldier.tscn" id="2_i37i2"]
[ext_resource type="PackedScene" uid="uid://bapke0vi7mx1m" path="res://scenes/Archer.tscn" id="2_qkkkq"]
[ext_resource type="Script" uid="uid://b4umrem1keqkr" path="res://scripts/hex_tile_map.gd" id="3_xh13x"]
[ext_resource type="PackedScene" uid="uid://rgm2p8qm0fpu" path="res://scenes/Scout.tscn" id="4_04ve2"]
[ext_resource type="Script" uid="uid://dbjcmu0pwdism" path="res://scripts/game_board_node.gd" id="4_6lofv"]
[ext_resource type="Script" uid="uid://cf8rb1kdlfa5q" path="res://scripts/UnitManager.gd" id="4_30eli"]
[ext_resource type="PackedScene" uid="uid://cjq2ma40uud72" path="res://scenes/Miner.tscn" id="5_c1to4"]
[ext_resource type="Script" uid="uid://cpvudcuvy1hxc" path="res://scripts/UIManager.gd" id="6_qxawf"]
[ext_resource type="PackedScene" uid="uid://y3gcjhi3ho0o" path="res://scenes/Tank.tscn" id="6_w5uqb"]
[ext_resource type="PackedScene" uid="uid://bj1f1demforgr" path="res://scenes/Cavalry.tscn" id="7_hl2y5"]
[ext_resource type="Script" uid="uid://srlpr2fln13a" path="res://scripts/camera.gd" id="7_rs5it"]
[ext_resource type="TileSet" uid="uid://vpqqir5dxo6" path="res://terrain.tres" id="10_axant"]
[ext_resource type="Script" uid="uid://cvqvvdw265adw" path="res://scripts/fog.gd" id="10_sax53"]
[ext_resource type="Script" uid="uid://cojvvohyejpxa" path="res://scenes/order_reminder.gd" id="11_cac7a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_17g6i"]
texture = ExtResource("2_17g6i")
margins = Vector2i(21, 6)
separation = Vector2i(42, 20)
texture_region_size = Vector2i(170, 192)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/next_alternative_id = 3
4:0/0 = 0
4:0/1 = 1
4:0/1/modulate = Color(1, 1, 1, 0.392157)
0:1/0 = 0
1:1/next_alternative_id = 2
1:1/0 = 0
1:1/1 = 1
1:1/1/modulate = Color(1, 1, 1, 0.588235)
2:1/0 = 0
3:1/next_alternative_id = 2
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_xh13x"]
tile_shape = 3
tile_size = Vector2i(170, 192)
sources/2 = SubResource("TileSetAtlasSource_17g6i")

[node name="Game" type="Node2D"]
script = ExtResource("1_xh13x")
unit_manager_path = NodePath("GameBoardNode/Units")
archer_scene = ExtResource("2_qkkkq")
soldier_scene = ExtResource("2_i37i2")
scout_scene = ExtResource("4_04ve2")
miner_scene = ExtResource("5_c1to4")
phalanx_scene = ExtResource("6_w5uqb")
cavalry_scene = ExtResource("7_hl2y5")

[node name="GameBoardNode" type="Node2D" parent="."]
script = ExtResource("4_6lofv")

[node name="HexTileMap" type="TileMapLayer" parent="GameBoardNode"]
tile_map_data = PackedByteArray("AAAAAAgAAgACAAAAAAD//wkAAgACAAAAAAAAAAoAAgACAAAAAAD//wsAAgACAAAAAAAAAAwAAgACAAAAAAD//w0AAgACAAAAAAAAAA4AAgACAAAAAAACAAAAAgACAAAAAAADAAAAAgACAAAAAAAEAAAAAgACAAAAAAAFAAAAAgACAAAAAAAGAAAAAgACAAAAAAAHAAAAAgACAAAAAAAHAAEAAgACAAAAAAAIAAAAAgACAAAAAAAIAAEAAgACAAAAAAAJAAAAAgACAAAAAAAKAAAAAgACAAAAAAALAAAAAgACAAAAAAAMAAAAAgACAAAAAAANAAAAAgACAAAAAAAOAAAAAgACAAAAAAAPAAAAAgACAAAAAAAQAAAAAgACAAAAAAARAAAAAgACAAAAAAARAAEAAgACAAAAAAARAAIAAgACAAAAAAARAAMAAgACAAAAAAAQAAMAAgACAAAAAAARAAQAAgACAAAAAAARAAUAAgACAAAAAAARAAYAAgACAAAAAAARAAcAAgADAAMAAAARAAgAAgACAAAAAAARAAkAAgACAAAAAAARAAoAAgACAAAAAAARAAsAAgACAAAAAAAQAAsAAgACAAAAAAARAAwAAgACAAAAAAARAA0AAgACAAAAAAARAA4AAgACAAAAAAAQAA4AAgACAAAAAAAPAA4AAgACAAAAAAAOAA4AAgACAAAAAAANAA4AAgACAAAAAAAMAA4AAgACAAAAAAALAA4AAgACAAAAAAAKAA4AAgACAAAAAAAJAA4AAgACAAAAAAAIAA4AAgACAAAAAAAHAA4AAgACAAAAAAAGAA4AAgACAAAAAAAFAA4AAgACAAAAAAAEAA4AAgACAAAAAAADAA0AAgACAAAAAAADAA4AAgACAAAAAAACAA4AAgACAAAAAAABAA4AAgACAAAAAAAAAA0AAgACAAAAAAABAAwAAgACAAAAAAAAAAsAAgACAAAAAAABAAoAAgABAAMAAAAAAAkAAgACAAAAAAAAAAcAAgACAAAAAAABAAQAAgABAAMAAAABAAMAAgACAAAAAAACAAIAAgACAAAAAAABAAEAAgACAAAAAAABAAIAAgACAAAAAAACAAMAAgACAAAAAAADAAIAAgACAAAAAAADAAEAAgACAAAAAAACAAEAAgACAAAAAAAEAAEAAgACAAAAAAAFAAEAAgACAAAAAAAGAAIAAgACAAAAAAAGAAEAAgACAAAAAAAHAAIAAgACAAAAAAAIAAIAAgACAAAAAAAJAAIAAgACAAAAAAAKAAIAAgACAAAAAAALAAIAAgACAAAAAAALAAEAAgACAAAAAAAMAAIAAgABAAEAAAAMAAEAAgACAAAAAAANAAIAAgACAAAAAAANAAEAAgACAAAAAAAOAAIAAgACAAAAAAAOAAEAAgACAAAAAAAPAAIAAgACAAAAAAAPAAEAAgACAAAAAAAKAAEAAgACAAAAAAAJAAEAAgACAAAAAAAFAAIAAgABAAEAAAAEAAIAAgACAAAAAAADAAgAAgACAAAAAAACAAcAAgABAAMAAAAEAAQAAgACAAAAAAAEAAMAAgACAAAAAAADAAMAAgACAAAAAAADAAQAAgACAAAAAAACAAQAAgACAAAAAAABAAUAAgACAAAAAAACAAYAAgACAAAAAAABAAYAAgACAAAAAAABAAgAAgACAAAAAAABAAcAAgACAAAAAAACAAUAAgACAAAAAAACAAgAAgACAAAAAAACAAkAAgACAAAAAAABAAkAAgACAAAAAAACAAoAAgACAAAAAAAEAAUAAgACAAAAAAAFAAQAAgACAAAAAAAFAAMAAgACAAAAAAAGAAMAAgACAAAAAAAGAAQAAgACAAAAAAADAAcAAgACAAAAAAACAAsAAgACAAAAAAACAAwAAgACAAAAAAABAA0AAgACAAAAAAABAAsAAgACAAAAAAACAA0AAgACAAAAAAADAAwAAgACAAAAAAADAAsAAgACAAAAAAADAAoAAgACAAAAAAADAAkAAgACAAAAAAAFAAUAAgACAAAAAAAHAAQAAgACAAAAAAAHAAMAAgACAAAAAAAQAAEAAgACAAAAAAAQAAIAAgACAAAAAAAPAAMAAgACAAAAAAAIAAMAAgACAAAAAAAJAAMAAgACAAAAAAAKAAMAAgACAAAAAAALAAMAAgACAAAAAAAMAAMAAgACAAAAAAANAAMAAgACAAAAAAAOAAMAAgACAAAAAAALAAQAAgACAAAAAAAKAAQAAgACAAAAAAAJAAQAAgACAAAAAAAIAAQAAgACAAAAAAAHAAUAAgACAAAAAAAGAAUAAgACAAAAAAAGAAgAAgACAAAAAAAFAAgAAgACAAAAAAAEAAkAAgACAAAAAAAEAAgAAgACAAAAAAD//wcAAgABAAMAAAAAAAYAAgACAAAAAAAAAAUAAgACAAAAAAAAAAQAAgACAAAAAAD//wUAAgACAAAAAAAAAAMAAgACAAAAAAD//wMAAgACAAAAAAAAAAIAAgACAAAAAAD//wEAAgACAAAAAAAAAAEAAgACAAAAAAABAAAAAgACAAAAAAAAAAAAAgACAAAAAAAQAAQAAgADAAMAAAAPAAQAAgACAAAAAAAOAAQAAgACAAAAAAANAAQAAgACAAAAAAAMAAQAAgACAAAAAAAIAAUAAgACAAAAAAAHAAYAAgACAAAAAAAJAAUAAgACAAAAAAAKAAUAAgACAAAAAAALAAUAAgACAAAAAAAMAAUAAgACAAAAAAANAAUAAgACAAAAAAAOAAUAAgACAAAAAAAPAAUAAgACAAAAAAAQAAUAAgACAAAAAAANAAYAAgACAAAAAAAMAAYAAgACAAAAAAALAAYAAgACAAAAAAAKAAYAAgACAAAAAAAJAAYAAgACAAAAAAAIAAYAAgACAAAAAAAGAAYAAgACAAAAAAAIAAcAAgABAAEAAAAOAAYAAgACAAAAAAAPAAYAAgACAAAAAAAQAAYAAgACAAAAAAANAAcAAgACAAAAAAAMAAcAAgACAAAAAAALAAcAAgACAAAAAAAKAAcAAgACAAAAAAAJAAcAAgACAAAAAAAHAAgAAgACAAAAAAAGAAkAAgACAAAAAAAFAAkAAgACAAAAAAAFAAoAAgACAAAAAAAEAAsAAgACAAAAAAAEAAoAAgACAAAAAAAEAAwAAgACAAAAAAAEAA0AAgACAAAAAAAFAA0AAgACAAAAAAAGAA0AAgACAAAAAAAHAA0AAgACAAAAAAAIAA0AAgACAAAAAAAJAA0AAgACAAAAAAAKAA0AAgACAAAAAAALAA0AAgACAAAAAAAMAA0AAgACAAAAAAANAA0AAgACAAAAAAAOAA0AAgACAAAAAAAPAA0AAgACAAAAAAAQAA0AAgACAAAAAAAQAAwAAgACAAAAAAAQAAoAAgADAAMAAAAQAAkAAgACAAAAAAAQAAcAAgACAAAAAAAPAAcAAgACAAAAAAAOAAcAAgADAAMAAAAMAAgAAgACAAAAAAALAAgAAgACAAAAAAAKAAgAAgACAAAAAAAJAAgAAgACAAAAAAAIAAgAAgACAAAAAAAGAAoAAgACAAAAAAAFAAsAAgACAAAAAAAFAAwAAgABAAEAAAAGAAwAAgACAAAAAAAGAAsAAgACAAAAAAAHAAoAAgACAAAAAAAHAAkAAgACAAAAAAAIAAkAAgACAAAAAAAIAAoAAgACAAAAAAAHAAsAAgACAAAAAAAHAAwAAgACAAAAAAAIAAwAAgACAAAAAAAIAAsAAgACAAAAAAAJAAoAAgACAAAAAAAJAAkAAgACAAAAAAALAAkAAgACAAAAAAALAAoAAgACAAAAAAAKAAoAAgACAAAAAAAJAAsAAgACAAAAAAAJAAwAAgACAAAAAAAKAAsAAgACAAAAAAAKAAkAAgACAAAAAAAKAAwAAgACAAAAAAALAAwAAgACAAAAAAAMAAwAAgABAAEAAAAMAAsAAgACAAAAAAANAAwAAgACAAAAAAANAAsAAgACAAAAAAAOAAwAAgACAAAAAAAPAAwAAgACAAAAAAAPAAsAAgACAAAAAAAPAAkAAgACAAAAAAAQAAgAAgACAAAAAAAPAAgAAgACAAAAAAAOAAkAAgACAAAAAAAPAAoAAgACAAAAAAAOAAsAAgACAAAAAAANAAoAAgACAAAAAAAOAAoAAgACAAAAAAANAAkAAgACAAAAAAAMAAoAAgACAAAAAAALAAsAAgACAAAAAAAMAAkAAgACAAAAAAANAAgAAgACAAAAAAAOAAgAAgACAAAAAAAHAAcAAgACAAAAAAAGAAcAAgACAAAAAAAFAAcAAgACAAAAAAAFAAYAAgACAAAAAAAEAAcAAgACAAAAAAADAAYAAgACAAAAAAAEAAYAAgACAAAAAAADAAUAAgACAAAAAAA=")
tile_set = SubResource("TileSet_xh13x")
script = ExtResource("3_xh13x")

[node name="PathArrows" type="Node2D" parent="GameBoardNode/HexTileMap"]

[node name="AttackArrows" type="Node2D" parent="GameBoardNode/HexTileMap"]

[node name="SupportArrows" type="Node2D" parent="GameBoardNode/HexTileMap"]

[node name="HealingSprites" type="Node2D" parent="GameBoardNode/HexTileMap"]

[node name="DefendingSprites" type="Node2D" parent="GameBoardNode/HexTileMap"]

[node name="Structures" type="Node2D" parent="GameBoardNode/HexTileMap"]

[node name="TerrainMap" type="TileMapLayer" parent="GameBoardNode"]
self_modulate = Color(1, 1, 1, 0.588235)
tile_set = ExtResource("10_axant")

[node name="OrderReminderMap" type="TileMapLayer" parent="GameBoardNode"]
self_modulate = Color(1, 1, 1, 0.588235)
tile_set = SubResource("TileSet_xh13x")
script = ExtResource("11_cac7a")

[node name="HighlightMap" type="TileMapLayer" parent="GameBoardNode"]
self_modulate = Color(1, 1, 1, 0.588235)
tile_set = SubResource("TileSet_xh13x")
script = ExtResource("3_xh13x")

[node name="Units" type="Node2D" parent="GameBoardNode"]
script = ExtResource("4_30eli")
turn_manager_path = NodePath("../..")

[node name="ExploredFog" type="TileMapLayer" parent="GameBoardNode"]
top_level = true
z_index = 98
tile_set = SubResource("TileSet_xh13x")

[node name="FogOfWar" type="TileMapLayer" parent="GameBoardNode"]
top_level = true
z_index = 100
tile_set = SubResource("TileSet_xh13x")
script = ExtResource("10_sax53")

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(1641, 1073)
zoom = Vector2(0.28, 0.28)
script = ExtResource("7_rs5it")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_qxawf")
turn_manager_path = NodePath("..")
map_node_path = NodePath("../GameBoardNode")
unit_manager_path = NodePath("../GameBoardNode/Units")
dev_mode_toggle_path = NodePath("DevModeCheckButton")

[node name="DevModeCheckButton" type="CheckButton" parent="UI"]
offset_left = 814.0
offset_top = 1.0
offset_right = 945.0
offset_bottom = 50.0
text = "Dev Mode"

[node name="HostButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.544
anchor_right = 0.84
anchor_bottom = 0.659
offset_left = -259.504
offset_top = 167.488
offset_right = -823.68
offset_bottom = 153.968
text = "Host Game
"

[node name="JoinButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.242
anchor_top = 0.782
anchor_right = 0.824
anchor_bottom = 0.907
offset_left = -275.784
offset_top = 78.264
offset_right = -805.248
offset_bottom = 56.264
text = "Join Game"

[node name="IPLineEdit" type="LineEdit" parent="UI"]
offset_left = 147.0
offset_top = 596.0
offset_right = 354.0
offset_bottom = 635.0
placeholder_text = "Enter Host IP"

[node name="PortLineEdit" type="LineEdit" parent="UI"]
offset_left = 149.0
offset_top = 531.0
offset_right = 322.0
offset_bottom = 571.0
placeholder_text = "Enter Host Port"

[node name="CancelGameButton" type="Button" parent="UI"]
visible = false
offset_left = 512.0
offset_top = 558.0
offset_right = 702.0
offset_bottom = 634.0
text = "Cancel Host/Join"

[node name="Panel" type="Panel" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 200)
offset_right = 206.0
offset_bottom = 297.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IncomeLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="ScoutButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Buy Scout"

[node name="MinerButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Buy Miner"

[node name="SoldierButton" type="Button" parent="UI/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "Buy Soldier (3g)"

[node name="ArcherButton" type="Button" parent="UI/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "Buy Archer (5g)"

[node name="PhalanxButton" type="Button" parent="UI/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "Buy Phalanx (5g)"

[node name="CavalryButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Buy Cavalry"

[node name="DoneButton" type="Button" parent="UI/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
text = "Done With Orders"

[node name="ActionMenu" type="PopupMenu" parent="UI/Panel"]
mouse_passthrough = true

[node name="UnitStatsCheckButton" type="CheckButton" parent="UI"]
offset_left = 215.0
offset_top = 1.0
offset_right = 346.0
offset_bottom = 32.0
text = "Unit Stats"

[node name="StatsPanel" type="Panel" parent="UI"]
visible = false
offset_left = 213.0
offset_top = 27.0
offset_right = 650.0
offset_bottom = 261.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StatsPanel"]
layout_mode = 0
offset_left = -2.0
offset_top = 1.0
offset_right = 434.0
offset_bottom = 233.0

[node name="ExecutionPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="PhaseLabel" type="Label" parent="UI/ExecutionPanel"]
layout_mode = 2

[node name="NextButton" type="Button" parent="UI/ExecutionPanel"]
layout_mode = 2

[node name="CancelDoneButton" type="Button" parent="UI"]
visible = false
offset_right = 202.0
offset_bottom = 31.0
text = "Cancel Order Submission"

[node name="DevPanel" type="Panel" parent="UI"]
visible = false
offset_left = 944.0
offset_top = 3.0
offset_right = 1148.0
offset_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DevPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FogCheckButton" type="CheckButton" parent="UI/DevPanel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Fog of war"

[node name="GiveIncomeButton" type="Button" parent="UI/DevPanel/VBoxContainer"]
layout_mode = 2
text = "Gold += Income"

[node name="DamagePanel" type="Panel" parent="UI"]
visible = false
offset_left = 1.0
offset_top = 301.0
offset_right = 325.0
offset_bottom = 643.0

[node name="Label" type="Label" parent="UI/DamagePanel"]
layout_mode = 0
offset_left = 5.0
offset_right = 233.0
offset_bottom = 26.0
text = "Damage Report"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/DamagePanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 24.0
offset_right = 320.0
offset_bottom = 323.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DamagePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
